# fraud-rule-engine

./: .env.aws.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.aws.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: deploy.sh  localstack-init.sh  seed_data.py
src/fraud_engine/: config.py  main.py
src/fraud_engine/adapters/api/: auth.py  dependencies.py  middleware.py
src/fraud_engine/adapters/cache/: redis_cache.py
src/fraud_engine/adapters/events/: in_memory_bus.py  sns_publisher.py  sqs_event_bus.py
src/fraud_engine/adapters/persistence/: database.py  orm.py
src/fraud_engine/adapters/storage/: s3_client.py
src/fraud_engine/application/: dto.py  ports.py
src/fraud_engine/application/services/: analytics_service.py  customer_service.py  rule_management_service.py  transaction_service.py
src/fraud_engine/domain/: engine.py  enums.py  events.py  exceptions.py  models.py
src/fraud_engine/domain/rules/: base.py  category_anomaly.py  cumulative.py  geographic.py  high_value.py  registry.py  time_anomaly.py  velocity.py
src/fraud_engine/observability/: logging.py  metrics.py  tracing.py
terraform/: cloudwatch.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  sns.tf  sqs.tf  tfplan  variables.tf  vpc.tf
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api.py
tests/unit/domain/: test_engine.py
tests/unit/domain/rules/: conftest.py  (+6 more)
(+11 files in other folders)
